--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li id="red"></li>
         <li id="black"></li>
         <li id="yellow"></li>
+        <li id="orange"></li>
     </ul>
 
     <script type="text/javascript" src="main.js"></script>
